--- a/widgets/build.gradle
+++ b/widgets/build.gradle
@@ -33,4 +33,11 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
+    compile 'com.facebook.fresco:fresco:1.10.0'
+    // For animated GIF support
+    compile 'com.facebook.fresco:animated-gif:1.10.0'
+    // For WebP support, including animated WebP
+    compile 'com.facebook.fresco:animated-webp:1.10.0'
+    compile 'com.facebook.fresco:webpsupport:1.10.0'
 }
