【新增】新增Dagger2+RxJava2+Retrofit+MVP的Demo

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':javeProject', ':audiodemo', ':surfuaceviewdemo', ':toolbardemo', ':glidedemo', ':widgets'
+include ':app', ':javeProject', ':audiodemo', ':surfuaceviewdemo', ':toolbardemo', ':glidedemo', ':widgets', ':mvvmdemo', ':daggerdemo'
