【新增】新增深拷贝和浅拷贝测试demo

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':javeProject', ':audiodemo', ':surfuaceviewdemo', ':toolbardemo', ':glidedemo', ':widgets', ':mvvmdemo', ':daggerdemo'
+include ':app', ':javeProject', ':audiodemo', ':surfuaceviewdemo', ':toolbardemo', ':glidedemo', ':widgets', ':mvvmdemo', ':daggerdemo', ':canvasdemo'
