--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':javeProject', ':audiodemo', ':surfuaceviewdemo', ':toolbardemo', ':glidedemo', ':widgets', ':mvvmdemo', ':daggerdemo', ':canvasdemo'
+include ':app', ':javeProject', ':audiodemo', ':surfuaceviewdemo', ':toolbardemo', ':glidedemo', ':widgets', ':mvvmdemo', ':daggerdemo', ':canvasdemo', ':annotationprocessordemo', ':annotation', ':annotationcompiler'
